Actualizar TreeNode.java